salesforce-cdp/1.0/modules/ROOT/pages/salesforce-cdp-connector-reference.adoc
= Salesforce CDP Connector 1.0 Reference

Anypoint Connector for Salesforce CDP (Salesforce CDP Connector) provides customers a pipeline to send data from both non-Salesforce and Salesforce properties alike into Salesforce CDP.

== Configurations

[[SdcConfig]]
=== SDC Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<SdcConfig_OauthJwt, OAuth JWT>>
* <<SdcConfig_OauthUserPass, OAuth Username Password>>
 | Connection types for this configuration. | | x
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  1 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  MINUTES |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  AUTO |
| Name a| String | ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> | Configures an expiration policy for the configuration. |  |
|===

=== Connection Types

[[SdcConfig_OauthJwt]]
==== OAuth JWT

Custom connection provider for the OAuth JWT flow.

===== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>>.. | Headers automatically added to every outbound request. |  |
| Query Parameters a| Array of <<DefaultQueryParam>>.. | Query parameters automatically added to every outbound request. |  |
| Connection Timeout a| Number | How long the connector waits before timing out when initially establishing a connection to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean | Indicates whether to use persistent connections:

* `true`

Mule uses persistent connections.

* `false`

Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number | Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number | When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Proxy Config a| <<Proxy>> | Configures a proxy for outbound connections. |  |
| Stream Response a| Boolean | If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number | Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Consumer key a| String | Consumer key for the Salesforce-connected app. |  | x
| Key store a| String | Path to the keystore used to sign data during authentication. |  | x
| Store password a| String | Password of the keystore. |  | x
| Certificate alias a| String | Alias of the certificate. |  | x
| Subject a| String | Username of the desired Salesforce user to take action on behalf of. |  | x
| Audience url a| String | Identifies the authorization server as an intended audience. |  | x
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS | Protocol to use for communication. Valid values are `HTTP` and `HTTPS`. |  HTTP |
| TLS Configuration a| <<Tls>> | Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[SdcConfig_OauthUserPass]]
==== OAuth Username Password

Custom connection provider for the username and password flow.

===== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>>.. | Headers automatically added to every outbound request. |  |
| Query Parameters a| Array of <<DefaultQueryParam>>.. | Query parameters automatically added to every outbound request. |  |
| Connection Timeout a| Number | How long the connector waits before timing out when initially establishing a connection to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean | Indicates whether to use persistent connections:

* `true`

Mule uses persistent connections.

* `false`

Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number | Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number | When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Proxy Config a| <<Proxy>> | Configures a proxy for outbound connections. |  |
| Stream Response a| Boolean | If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number | Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Consumer key a| String | Consumer key for the Salesforce-connected app. |  | x
| Consumer secret a| String | Your application's client secret (consumer secret in Remote Access Detail). |  | x
| Username a| String | Username used to initialize the session. |  | x
| Password a| String | Password used to authenticate the user. |  | x
| Audience url a| String | Identifies the authorization server as an intended audience. |  | x
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS | Protocol to use for communication. Valid values are `HTTP` and `HTTPS`. |  HTTP |
| TLS Configuration a| <<Tls>> | Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Operations

* <<CreateBulkJob>>
* <<UploadDataBulkJob>>
* <<UpdateBulkOperationJob>>
* <<DeleteBulkJob>>
* <<GetBulkJob>>
* <<InsertObjects>>
* <<DeleteObjects>>
* <<Query>>

[[CreateBulkJob]]
== Bulk - Create Job
`<sdc:create-bulk-job>`


Creates a job that represents the bulk operation for managing data. This operation makes an HTTP POST request to the /ingest/jobs endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Source API name a| String | Name of the ingestion source API to work with. |  | x
| Object name a| String | Name of object to work with. |  | x
| Operation a| Enumeration, one of:

** delete
** upsert | Operation to execute. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE

[[UploadDataBulkJob]]
== Bulk - Upload Job Data
`<sdc:upload-data-bulk-job>`


Ingests external datasets into CDP. This operation makes an HTTP PUT request to the /ingest/jobs/{id}/batches endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| ID a| String | Job ID returned in the response body from the *Create Job* request. |  | x
| Body a| String | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[UpdateBulkOperationJob]]
== Bulk - Close / Abort Job
`<sdc:update-bulk-operation-job>`


Updates the job for the specified job ID. This operation makes an HTTP PATCH request to the /api/v1/ingest/jobs/{id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Job ID a| String | Identifier of the job. |  | x
| State a| Enumeration, one of:

** Aborted
** UploadComplete | New state for the job. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE



[[DeleteBulkJob]]
== Bulk - Delete Job
`<sdc:delete-bulk-job>`


Deletes the job for the specified job ID. This operation makes an HTTP DELETE request to the /ingest/jobs/{id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Job ID a| String | Identifier of the job. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[GetBulkJob]]
== Bulk - Get Job
`<sdc:get-bulk-job>`


Retrieves the job details for the specified job ID. This operation makes an HTTP GET request to the /api/v1/ingest/jobs/{id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Job ID a| String | Identifier of the job. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[InsertObjects]]
== Streaming - Insert Objects
`<sdc:insert-objects>`


Used to insert objects. This operation makes an HTTP POST request to the /ingest/connectors/{connector-name}/{object-name} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Source API name a| String | Ingest source API name. |  | x
| Object name a| String | Name of the collection to load data into. |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE




[[DeleteObjects]]
== Streaming - Delete Objects
`<sdc:delete-objects>`


Used to delete objects. This operation makes an HTTP DELETE request to the /ingest/connectors/{connector-name}/{object-name} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Source API name a| String | Ingest source API name. |  | x
| Object name a| String | Name of the collection to delete data from. |  | x
| IDs a| Array of String | Comma-separated list of IDs to delete. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


[[Query]]
== Query
`<sdc:query>`


Used for queries. This operation makes an HTTP POST request to the /query endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component.. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<SdcConfig>>

=== Throws

* SDC:BAD_REQUEST
* SDC:CLIENT_ERROR
* SDC:CONNECTIVITY
* SDC:INTERNAL_SERVER_ERROR
* SDC:NOT_ACCEPTABLE
* SDC:NOT_FOUND
* SDC:RETRY_EXHAUSTED
* SDC:SERVER_ERROR
* SDC:SERVICE_UNAVAILABLE
* SDC:TIMEOUT
* SDC:TOO_MANY_REQUESTS
* SDC:UNAUTHORIZED
* SDC:UNSUPPORTED_MEDIA_TYPE


== Types

[[DefaultHeader]]
=== Default Header

Headers automatically added to every outbound request.

Headers automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

Query parameters automatically added to every outbound request.

Query parameters automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[Proxy]]
=== Proxy

Configures a proxy for outbound connections.

Configures the settings used to connect through a proxy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Hostname or IP address of the proxy server. |  | x
| Port a| Number | Port of the proxy server. |  | x
| Username a| String | Username to authenticate against the proxy server. |  |
| Password a| String | Password to authenticate against the proxy server. |  |
| Non Proxy Hosts a| String | Comma-separated list of hosts that the proxy must not be used against. |  |
|===

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures how to validate certificates. |  |
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of truststore. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Type a| String | Type of store used. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`
+
Verify only the last element in the certificate chain.

* `false`
+
Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`
+
Check the Certification Revocation List (CRL) for certificate validity.

* `false`
+
Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`
+
Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`
+
Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`
+
Avoid verification failure.

* `false`
+
Allow the verification to fail. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certicate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  |
|===

=== Reconnection

Configures a reconnection strategy for an operation.

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  |
|===

=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

Configures a forever reconnection strategy by which the connector operation source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often the Mule app attempts to reconnect to the remote service or API, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance is allowed to be idle before it is considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===

[[HttpResponseAttributes]]
=== HTTP Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  | x
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

Configures the in-memory streaming strategy by which the request fails if the data exceeds the buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. |  |
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

== See Also

* xref:index.adoc[About Salesforce CDP Connector]
* https://help.mulesoft.com[MuleSoft Help Center]
